# ChangeLog for games-emulation/pcsxr
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pcsxr-1.9.91-r1 (23 Jan 2010)

  23 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +pcsxr-1.9.91-r1.ebuild,
  pcsxr-9999.ebuild, +files/pcsxr-implicit-declaration.patch:
  Bumped with patch to fix gcc warning. Applied to the live ebuild also.

  21 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> pcsxr-9999.ebuild:
  Moved ESVN_* before inherit.

*pcsxr-9999 (19 Jan 2010)

  19 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +pcsxr-9999.ebuild:
  Added live SVN ebuild.

*pcsxr-1.9.91 (19 Jan 2010)

  19 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +pcsxr-1.9.91.ebuild,
  +files/pcsxr-datadir.patch:
  New ebuild. Adapted and cleaned up from Gentoo bug #282363.
