@@ -3,6 +3,6 @@ AUX pcsxr-implicit-declaration.patch 339 RMD160 5e796e6ead07d30000cc251c2f219152
 DIST pcsxr-1.9.91.tar.bz2 1220648 RMD160 e97261648cfb667e9584743267acfbece3beb101 SHA1 3c6160c5c24b8475578550a4ec18fa1d0c64ada8 SHA256 82f685dc2699d8a325f77ddd9bf99c25e6e0d90380cc045c0723d13b971bfa3d
 EBUILD pcsxr-1.9.91-r1.ebuild 1417 RMD160 159c1f640513c004c5aeb517b07053d8008ae849 SHA1 2ae8d28fea41521428091709706fcf1fda11a172 SHA256 3b17390fc809b15b7638dca35b26ea6bbed14c037a6088f3667460e99d1c4cd3
 EBUILD pcsxr-1.9.91.ebuild 1366 RMD160 81b5fe538cf44ce30d960751e80dc08f4b782df0 SHA1 c1d056925b301504b8fe6bb45a7686f8a924533e SHA256 4f69fa0d26c9b09957afb312957438964442854e4ea4794d11e3619661b22cce
-EBUILD pcsxr-9999.ebuild 1337 RMD160 7c954fbe0e64817183baeb961159f674b8422a0d SHA1 4c8b1bf0195a13de98b2401a8e877df69bb86189 SHA256 ddec4bc5edef03f31605a0437e73f07568dbec2421720ab9c75d0ac23c6f0a77
-MISC ChangeLog 779 RMD160 fea29e1923889825d6d7c4ed87985b192d4b7355 SHA1 9c489b5b092c056cbcf6accf700181cf6ba4c80c SHA256 f92280ebf73942a4745fac503ba95a48ebf04ea38dc0b30f1073c926e02c1dd4
+EBUILD pcsxr-9999.ebuild 1426 RMD160 aca2219e93ecac87905e5343bd08eec6afaa6f2b SHA1 46dacaceba09ef1abe0c139bdd36d346a4d4341b SHA256 c97caf8899ccd48086fd54e3c6c67c7719356369ccead90744ae3ebbfb7f262c
+MISC ChangeLog 891 RMD160 ad047caf98d79fc5b3d3e5121cb403a6ed3b7c7a SHA1 b186c224cede852834ef6a047b5adcd3ab8e0aed SHA256 2a552022d030de8ae94913f806751fbd3df307f2ee983ed498c73bbbfca21435
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
