@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Feb 2010; Michał Ziąbkowski <mziab@o2.pl> pcsxr-9999.ebuild:
+  Added pulseaudio support to live ebuild.
+
 *pcsxr-1.9.91-r1 (23 Jan 2010)
 
   23 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +pcsxr-1.9.91-r1.ebuild,
